--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@splinetool/runtime": "^0.9.383",
     "framer-motion": "^10.12.18",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
